added a small .mgf file into the test fixures

--- a/experimental/ChemicalMixtureCreatorExample.ipynb
+++ b/experimental/ChemicalMixtureCreatorExample.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
     "\n",
     "# OR load from an .mgf file - here we filter to only keep spectra with 20 peaks or fewer\n",
     "# and sample without replacement\n",
-    "us = MGFMS2Sampler('/Users/simon/git/vimms/Experimental/small_mgf.mgf', max_peaks=20, replace=False)\n",
+    "us = MGFMS2Sampler(Path(BASE_DIR,'small_mgf.mgf'), max_peaks=20, replace=False)\n",
     "\n",
     "# generates Gaussian chromatograms\n",
     "cs = GaussianChromatogramSampler()\n",
@@ -140,161 +140,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "UnknownChemical mz=160.6274 rt=305.86 max_intensity=291520.72\n",
-      "\t MSN Fragment mz=53.0460 ms_level=2\n",
-      "\t MSN Fragment mz=62.7850 ms_level=2\n",
-      "\t MSN Fragment mz=65.1340 ms_level=2\n",
-      "\t MSN Fragment mz=65.8520 ms_level=2\n",
-      "\t MSN Fragment mz=67.0850 ms_level=2\n",
-      "\t MSN Fragment mz=67.7250 ms_level=2\n",
-      "\t MSN Fragment mz=68.6690 ms_level=2\n",
-      "\t MSN Fragment mz=70.1990 ms_level=2\n",
-      "\t MSN Fragment mz=77.2460 ms_level=2\n",
-      "\t MSN Fragment mz=78.3700 ms_level=2\n",
-      "\t MSN Fragment mz=80.3130 ms_level=2\n",
-      "\t MSN Fragment mz=81.5230 ms_level=2\n",
-      "\t MSN Fragment mz=82.5760 ms_level=2\n",
-      "\t MSN Fragment mz=94.2980 ms_level=2\n",
-      "\t MSN Fragment mz=106.0750 ms_level=2\n",
-      "\t MSN Fragment mz=107.6130 ms_level=2\n",
-      "\t MSN Fragment mz=108.6590 ms_level=2\n",
-      "\t MSN Fragment mz=148.9180 ms_level=2\n",
-      "UnknownChemical mz=965.3400 rt=345.47 max_intensity=509152.22\n",
-      "\t MSN Fragment mz=36.2000 ms_level=2\n",
-      "\t MSN Fragment mz=54.3000 ms_level=2\n",
-      "\t MSN Fragment mz=62.0000 ms_level=2\n",
-      "\t MSN Fragment mz=70.6000 ms_level=2\n",
-      "\t MSN Fragment mz=73.1000 ms_level=2\n",
-      "\t MSN Fragment mz=76.0000 ms_level=2\n",
-      "\t MSN Fragment mz=79.6000 ms_level=2\n",
-      "\t MSN Fragment mz=94.2000 ms_level=2\n",
-      "\t MSN Fragment mz=108.1000 ms_level=2\n",
-      "\t MSN Fragment mz=108.9000 ms_level=2\n",
-      "\t MSN Fragment mz=126.1000 ms_level=2\n",
-      "UnknownChemical mz=626.2528 rt=407.32 max_intensity=1049879.34\n",
-      "\t MSN Fragment mz=279.0900 ms_level=2\n",
-      "\t MSN Fragment mz=305.0400 ms_level=2\n",
-      "\t MSN Fragment mz=323.0900 ms_level=2\n",
-      "\t MSN Fragment mz=335.0300 ms_level=2\n",
-      "\t MSN Fragment mz=351.1300 ms_level=2\n",
-      "\t MSN Fragment mz=365.1200 ms_level=2\n",
-      "\t MSN Fragment mz=377.1000 ms_level=2\n",
-      "\t MSN Fragment mz=395.0200 ms_level=2\n",
-      "\t MSN Fragment mz=412.2100 ms_level=2\n",
-      "\t MSN Fragment mz=455.0600 ms_level=2\n",
-      "\t MSN Fragment mz=467.0500 ms_level=2\n",
-      "\t MSN Fragment mz=487.1600 ms_level=2\n",
-      "\t MSN Fragment mz=531.1300 ms_level=2\n",
-      "UnknownChemical mz=905.3519 rt=422.44 max_intensity=3038027.64\n",
-      "\t MSN Fragment mz=55.0583 ms_level=2\n",
-      "\t MSN Fragment mz=65.0096 ms_level=2\n",
-      "\t MSN Fragment mz=69.0734 ms_level=2\n",
-      "\t MSN Fragment mz=71.9941 ms_level=2\n",
-      "\t MSN Fragment mz=80.0533 ms_level=2\n",
-      "\t MSN Fragment mz=95.0863 ms_level=2\n",
-      "\t MSN Fragment mz=97.1039 ms_level=2\n",
-      "\t MSN Fragment mz=100.0251 ms_level=2\n",
-      "\t MSN Fragment mz=101.0333 ms_level=2\n",
-      "\t MSN Fragment mz=108.0837 ms_level=2\n",
-      "\t MSN Fragment mz=112.1153 ms_level=2\n",
-      "\t MSN Fragment mz=114.0404 ms_level=2\n",
-      "\t MSN Fragment mz=122.1002 ms_level=2\n",
-      "\t MSN Fragment mz=123.1070 ms_level=2\n",
-      "\t MSN Fragment mz=147.0870 ms_level=2\n",
-      "\t MSN Fragment mz=156.0860 ms_level=2\n",
-      "\t MSN Fragment mz=220.0829 ms_level=2\n",
-      "UnknownChemical mz=136.6160 rt=427.04 max_intensity=166010.47\n",
-      "\t MSN Fragment mz=41.3640 ms_level=2\n",
-      "\t MSN Fragment mz=42.3560 ms_level=2\n",
-      "\t MSN Fragment mz=43.4250 ms_level=2\n",
-      "\t MSN Fragment mz=44.3390 ms_level=2\n",
-      "\t MSN Fragment mz=55.2540 ms_level=2\n",
-      "\t MSN Fragment mz=70.3380 ms_level=2\n",
-      "\t MSN Fragment mz=71.2900 ms_level=2\n",
-      "\t MSN Fragment mz=72.1800 ms_level=2\n",
-      "\t MSN Fragment mz=86.9290 ms_level=2\n",
-      "\t MSN Fragment mz=87.8740 ms_level=2\n",
-      "\t MSN Fragment mz=89.1310 ms_level=2\n",
-      "UnknownChemical mz=596.6048 rt=432.65 max_intensity=97467.74\n",
-      "\t MSN Fragment mz=53.0385 ms_level=2\n",
+      "UnknownChemical mz=134.7209 rt=316.00 max_intensity=380400.38\n",
+      "\t MSN Fragment mz=43.0000 ms_level=2\n",
+      "\t MSN Fragment mz=55.0000 ms_level=2\n",
+      "\t MSN Fragment mz=56.0000 ms_level=2\n",
+      "\t MSN Fragment mz=70.0000 ms_level=2\n",
+      "\t MSN Fragment mz=73.0000 ms_level=2\n",
+      "\t MSN Fragment mz=74.0000 ms_level=2\n",
+      "\t MSN Fragment mz=97.0000 ms_level=2\n",
+      "\t MSN Fragment mz=98.0000 ms_level=2\n",
+      "\t MSN Fragment mz=116.0000 ms_level=2\n",
+      "\t MSN Fragment mz=133.0000 ms_level=2\n",
+      "\t MSN Fragment mz=134.0000 ms_level=2\n",
+      "UnknownChemical mz=37.8086 rt=341.67 max_intensity=9790291.08\n",
+      "\t MSN Fragment mz=354.9900 ms_level=2\n",
+      "\t MSN Fragment mz=358.9500 ms_level=2\n",
+      "\t MSN Fragment mz=385.1000 ms_level=2\n",
+      "\t MSN Fragment mz=408.9900 ms_level=2\n",
+      "\t MSN Fragment mz=409.0600 ms_level=2\n",
+      "\t MSN Fragment mz=414.0600 ms_level=2\n",
+      "\t MSN Fragment mz=424.0100 ms_level=2\n",
+      "\t MSN Fragment mz=427.0800 ms_level=2\n",
+      "\t MSN Fragment mz=439.0000 ms_level=2\n",
+      "\t MSN Fragment mz=439.0400 ms_level=2\n",
+      "UnknownChemical mz=360.9205 rt=343.34 max_intensity=8369730.92\n",
+      "\t MSN Fragment mz=53.0386 ms_level=2\n",
+      "\t MSN Fragment mz=65.0388 ms_level=2\n",
       "\t MSN Fragment mz=77.0387 ms_level=2\n",
-      "\t MSN Fragment mz=79.0543 ms_level=2\n",
-      "\t MSN Fragment mz=81.0332 ms_level=2\n",
-      "\t MSN Fragment mz=93.0575 ms_level=2\n",
-      "\t MSN Fragment mz=95.0491 ms_level=2\n",
-      "\t MSN Fragment mz=105.0447 ms_level=2\n",
-      "\t MSN Fragment mz=106.0652 ms_level=2\n",
-      "\t MSN Fragment mz=107.0730 ms_level=2\n",
-      "\t MSN Fragment mz=121.0758 ms_level=2\n",
-      "\t MSN Fragment mz=135.0921 ms_level=2\n",
-      "\t MSN Fragment mz=136.0991 ms_level=2\n",
-      "UnknownChemical mz=884.7783 rt=463.83 max_intensity=1075630.64\n",
-      "\t MSN Fragment mz=203.9000 ms_level=2\n",
-      "\t MSN Fragment mz=221.8000 ms_level=2\n",
-      "\t MSN Fragment mz=264.9000 ms_level=2\n",
-      "\t MSN Fragment mz=310.8000 ms_level=2\n",
-      "\t MSN Fragment mz=406.0000 ms_level=2\n",
-      "\t MSN Fragment mz=406.6000 ms_level=2\n",
-      "\t MSN Fragment mz=467.6000 ms_level=2\n",
-      "\t MSN Fragment mz=477.6000 ms_level=2\n",
-      "\t MSN Fragment mz=512.9000 ms_level=2\n",
-      "\t MSN Fragment mz=513.6000 ms_level=2\n",
-      "\t MSN Fragment mz=514.2000 ms_level=2\n",
-      "\t MSN Fragment mz=669.8000 ms_level=2\n",
-      "\t MSN Fragment mz=670.6000 ms_level=2\n",
-      "\t MSN Fragment mz=715.8000 ms_level=2\n",
-      "\t MSN Fragment mz=716.5000 ms_level=2\n",
-      "\t MSN Fragment mz=717.1000 ms_level=2\n",
-      "UnknownChemical mz=582.8727 rt=476.51 max_intensity=17852.34\n",
-      "\t MSN Fragment mz=55.0417 ms_level=2\n",
-      "\t MSN Fragment mz=56.0369 ms_level=2\n",
-      "\t MSN Fragment mz=56.0495 ms_level=2\n",
-      "\t MSN Fragment mz=57.0573 ms_level=2\n",
-      "\t MSN Fragment mz=58.0288 ms_level=2\n",
-      "\t MSN Fragment mz=58.0651 ms_level=2\n",
-      "\t MSN Fragment mz=72.0444 ms_level=2\n",
-      "\t MSN Fragment mz=73.0397 ms_level=2\n",
-      "\t MSN Fragment mz=86.0600 ms_level=2\n",
-      "\t MSN Fragment mz=87.0679 ms_level=2\n",
-      "\t MSN Fragment mz=117.0659 ms_level=2\n",
-      "UnknownChemical mz=102.4084 rt=478.50 max_intensity=5656762.86\n",
-      "\t MSN Fragment mz=16.2000 ms_level=2\n",
-      "\t MSN Fragment mz=21.8000 ms_level=2\n",
-      "\t MSN Fragment mz=40.1000 ms_level=2\n",
-      "\t MSN Fragment mz=58.1000 ms_level=2\n",
-      "\t MSN Fragment mz=59.1000 ms_level=2\n",
-      "\t MSN Fragment mz=76.0000 ms_level=2\n",
-      "\t MSN Fragment mz=85.4000 ms_level=2\n",
-      "\t MSN Fragment mz=132.8000 ms_level=2\n",
-      "\t MSN Fragment mz=146.6000 ms_level=2\n",
-      "\t MSN Fragment mz=156.9000 ms_level=2\n",
-      "\t MSN Fragment mz=162.6000 ms_level=2\n",
-      "\t MSN Fragment mz=438.6000 ms_level=2\n",
-      "UnknownChemical mz=425.1215 rt=499.07 max_intensity=1161765.71\n",
-      "\t MSN Fragment mz=72.2000 ms_level=2\n",
-      "\t MSN Fragment mz=73.3000 ms_level=2\n",
-      "\t MSN Fragment mz=84.2000 ms_level=2\n",
-      "\t MSN Fragment mz=85.2000 ms_level=2\n",
-      "\t MSN Fragment mz=118.1000 ms_level=2\n",
-      "\t MSN Fragment mz=119.2000 ms_level=2\n",
-      "\t MSN Fragment mz=130.1000 ms_level=2\n",
-      "\t MSN Fragment mz=148.1000 ms_level=2\n",
-      "\t MSN Fragment mz=176.1000 ms_level=2\n",
-      "\t MSN Fragment mz=184.1000 ms_level=2\n",
-      "\t MSN Fragment mz=185.2000 ms_level=2\n",
-      "\t MSN Fragment mz=201.1000 ms_level=2\n",
-      "\t MSN Fragment mz=202.1000 ms_level=2\n",
-      "\t MSN Fragment mz=211.1000 ms_level=2\n",
-      "\t MSN Fragment mz=229.1000 ms_level=2\n",
-      "\t MSN Fragment mz=230.1000 ms_level=2\n",
-      "\t MSN Fragment mz=231.1000 ms_level=2\n"
+      "\t MSN Fragment mz=80.0495 ms_level=2\n",
+      "\t MSN Fragment mz=90.0339 ms_level=2\n",
+      "\t MSN Fragment mz=97.0106 ms_level=2\n",
+      "\t MSN Fragment mz=105.0335 ms_level=2\n",
+      "\t MSN Fragment mz=106.9949 ms_level=2\n",
+      "\t MSN Fragment mz=109.0106 ms_level=2\n",
+      "\t MSN Fragment mz=124.0216 ms_level=2\n",
+      "\t MSN Fragment mz=134.0059 ms_level=2\n",
+      "\t MSN Fragment mz=135.9978 ms_level=2\n",
+      "\t MSN Fragment mz=152.0164 ms_level=2\n",
+      "UnknownChemical mz=631.5135 rt=356.31 max_intensity=366502.71\n",
+      "\t MSN Fragment mz=85.7970 ms_level=2\n",
+      "\t MSN Fragment mz=129.3130 ms_level=2\n",
+      "\t MSN Fragment mz=129.8510 ms_level=2\n",
+      "\t MSN Fragment mz=131.4350 ms_level=2\n",
+      "\t MSN Fragment mz=132.0240 ms_level=2\n",
+      "\t MSN Fragment mz=206.8520 ms_level=2\n",
+      "\t MSN Fragment mz=227.9130 ms_level=2\n",
+      "\t MSN Fragment mz=242.4950 ms_level=2\n",
+      "\t MSN Fragment mz=243.0300 ms_level=2\n",
+      "\t MSN Fragment mz=243.6940 ms_level=2\n",
+      "\t MSN Fragment mz=248.1180 ms_level=2\n",
+      "\t MSN Fragment mz=270.9620 ms_level=2\n",
+      "\t MSN Fragment mz=288.9390 ms_level=2\n",
+      "\t MSN Fragment mz=289.5600 ms_level=2\n",
+      "UnknownChemical mz=488.6071 rt=361.11 max_intensity=2219798.71\n",
+      "\t MSN Fragment mz=55.0000 ms_level=2\n",
+      "\t MSN Fragment mz=69.0000 ms_level=2\n",
+      "\t MSN Fragment mz=83.0000 ms_level=2\n",
+      "\t MSN Fragment mz=97.0000 ms_level=2\n",
+      "\t MSN Fragment mz=103.0000 ms_level=2\n",
+      "\t MSN Fragment mz=125.0000 ms_level=2\n",
+      "\t MSN Fragment mz=143.0000 ms_level=2\n",
+      "\t MSN Fragment mz=245.0000 ms_level=2\n",
+      "\t MSN Fragment mz=263.0000 ms_level=2\n",
+      "\t MSN Fragment mz=285.0000 ms_level=2\n",
+      "UnknownChemical mz=276.9423 rt=407.70 max_intensity=16808.04\n",
+      "\t MSN Fragment mz=26.8000 ms_level=2\n",
+      "\t MSN Fragment mz=28.2000 ms_level=2\n",
+      "\t MSN Fragment mz=30.6000 ms_level=2\n",
+      "\t MSN Fragment mz=39.1000 ms_level=2\n",
+      "\t MSN Fragment mz=51.9000 ms_level=2\n",
+      "\t MSN Fragment mz=54.2000 ms_level=2\n",
+      "\t MSN Fragment mz=68.1000 ms_level=2\n",
+      "\t MSN Fragment mz=68.9000 ms_level=2\n",
+      "\t MSN Fragment mz=79.7000 ms_level=2\n",
+      "\t MSN Fragment mz=81.2000 ms_level=2\n",
+      "UnknownChemical mz=638.5774 rt=411.60 max_intensity=11440.81\n",
+      "\t MSN Fragment mz=286.0453 ms_level=2\n",
+      "\t MSN Fragment mz=301.0763 ms_level=2\n",
+      "\t MSN Fragment mz=301.3766 ms_level=2\n",
+      "\t MSN Fragment mz=343.0823 ms_level=2\n",
+      "\t MSN Fragment mz=343.2426 ms_level=2\n",
+      "\t MSN Fragment mz=343.4562 ms_level=2\n",
+      "\t MSN Fragment mz=343.6522 ms_level=2\n",
+      "\t MSN Fragment mz=343.8481 ms_level=2\n",
+      "\t MSN Fragment mz=344.0798 ms_level=2\n",
+      "\t MSN Fragment mz=385.0914 ms_level=2\n",
+      "\t MSN Fragment mz=385.4875 ms_level=2\n",
+      "\t MSN Fragment mz=385.6951 ms_level=2\n",
+      "\t MSN Fragment mz=386.0915 ms_level=2\n",
+      "\t MSN Fragment mz=393.4144 ms_level=2\n",
+      "UnknownChemical mz=216.2550 rt=421.66 max_intensity=1871546.03\n",
+      "\t MSN Fragment mz=68.9971 ms_level=2\n",
+      "\t MSN Fragment mz=85.0284 ms_level=2\n",
+      "\t MSN Fragment mz=91.0542 ms_level=2\n",
+      "\t MSN Fragment mz=103.0542 ms_level=2\n",
+      "\t MSN Fragment mz=105.0335 ms_level=2\n",
+      "\t MSN Fragment mz=129.0335 ms_level=2\n",
+      "\t MSN Fragment mz=131.0854 ms_level=2\n",
+      "\t MSN Fragment mz=141.0699 ms_level=2\n",
+      "\t MSN Fragment mz=144.0570 ms_level=2\n",
+      "\t MSN Fragment mz=187.0753 ms_level=2\n",
+      "UnknownChemical mz=100.4399 rt=429.57 max_intensity=35106.35\n",
+      "\t MSN Fragment mz=36.2000 ms_level=2\n",
+      "\t MSN Fragment mz=50.0000 ms_level=2\n",
+      "\t MSN Fragment mz=55.1000 ms_level=2\n",
+      "\t MSN Fragment mz=64.1000 ms_level=2\n",
+      "\t MSN Fragment mz=67.7000 ms_level=2\n",
+      "\t MSN Fragment mz=82.3000 ms_level=2\n",
+      "\t MSN Fragment mz=83.1000 ms_level=2\n",
+      "\t MSN Fragment mz=99.1000 ms_level=2\n",
+      "\t MSN Fragment mz=100.1000 ms_level=2\n",
+      "\t MSN Fragment mz=118.2000 ms_level=2\n",
+      "UnknownChemical mz=1047.6646 rt=496.35 max_intensity=33141.98\n",
+      "\t MSN Fragment mz=174.0000 ms_level=2\n",
+      "\t MSN Fragment mz=187.9100 ms_level=2\n",
+      "\t MSN Fragment mz=203.0500 ms_level=2\n",
+      "\t MSN Fragment mz=242.6600 ms_level=2\n",
+      "\t MSN Fragment mz=291.7200 ms_level=2\n",
+      "\t MSN Fragment mz=306.0500 ms_level=2\n",
+      "\t MSN Fragment mz=310.1300 ms_level=2\n",
+      "\t MSN Fragment mz=321.2800 ms_level=2\n",
+      "\t MSN Fragment mz=323.0600 ms_level=2\n",
+      "\t MSN Fragment mz=338.2600 ms_level=2\n"
      ]
     }
    ],
@@ -315,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,14 +325,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "(600.000s) ms_level=1: 100%|█████████▉| 299.99999999999994/300 [00:04<00:00, 63.88it/s] \n"
+      "(600.000s) ms_level=1: 100%|█████████▉| 299.99999999999994/300 [00:04<00:00, 62.39it/s]  \n"
      ]
     }
    ],
