Fixed broken import in notebooks (issue #73)

--- a/demo/03. MultiSampleMethods/02. Grid Search.ipynb
+++ b/demo/03. MultiSampleMethods/02. Grid Search.ipynb
@@ -59,7 +59,8 @@
     "from vimms.Controller import *\n",
     "from vimms.Common import *\n",
     "from vimms.PlotsForPaper import *\n",
-    "from vimms.Roi import make_roi, RoiToChemicalCreator, extract_roi\n",
+    "from vimms.Roi import make_roi, RoiToChemicalCreator\n",
+    "from vimms.FeatureExtraction import extract_roi\n",
     "from vimms.SequenceManager import *"
    ]
   },
