--- a/examples/01. vimms (Wandy et al 2019)/01. Download Data.ipynb
+++ b/examples/01. vimms (Wandy et al 2019)/01. Download Data.ipynb
@@ -74,7 +74,8 @@
     "from vimms.MassSpec import IndependentMassSpectrometer\n",
     "from vimms.Controller import SimpleMs1Controller\n",
     "from vimms.Common import *\n",
-    "from vimms.Roi import make_roi, RoiToChemicalCreator, extract_roi"
+    "from vimms.Roi import make_roi, RoiToChemicalCreator\n",
+    "from vimms.FeatureExtraction import extract_roi"
    ]
   },
   {
