Updated DIA example. Includes examples for: AIF, SWATH, nested DIA and tree DIA

--- a/demo/02. Methods/03. DIA.ipynb
+++ b/demo/02. Methods/03. DIA.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1. Full Scan"
+    "# 3. DIA"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook shows how to run the full scan method on a ViMMS dataset"
+    "This notebook shows how to run a variety of Data Independent Acquisition (DIA) methods using ViMMS"
    ]
   },
   {
@@ -59,7 +59,7 @@
    "outputs": [],
    "source": [
     "from vimms.MassSpec import IndependentMassSpectrometer\n",
-    "from vimms.Controller import TreeController\n",
+    "from vimms.Controller import AIF, SWATH, DiaController\n",
     "from vimms.Environment import Environment\n",
     "from vimms.Common import *"
    ]
@@ -77,7 +77,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_dir = os.path.abspath(os.path.join(os.getcwd(),'..','..','tests','integration','fixtures'))\n",
+    "data_dir = os.path.abspath(os.path.join(os.getcwd(),'..','..','tests','fixtures'))\n",
     "dataset = load_obj(os.path.join(data_dir, 'QCB_22May19_1.p'))\n",
     "ps = load_obj(Path(data_dir,'peak_sampler_mz_rt_int_beerqcb_fragmentation.p'))"
    ]
@@ -86,7 +86,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Run SWATH"
+    "### AIF"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This example shows how to run an All-Ion Fragmentation (AIF) DIA method on ViMMS. The controller sends an MS1 scan followed by a fragmentation scan which covers the full m/z range."
    ]
   },
   {
@@ -95,9 +102,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rt_range = [(0, 1440)]\n",
-    "min_rt = rt_range[0][0]\n",
-    "max_rt = rt_range[0][1]"
+    "isolation_width = 1\n",
+    "N = 10\n",
+    "rt_tol = 15\n",
+    "mz_tol = 10\n",
+    "ionisation_mode = POSITIVE\n",
+    "\n",
+    "min_mz = 70\n",
+    "max_mz = 1000\n",
+    "\n",
+    "min_rt = 0\n",
+    "max_rt = 400\n",
+    "\n",
+    "scan_time_dict = {1: 0.12, 2: 0.06}"
    ]
   },
   {
@@ -106,18 +123,76 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dia_design = 'basic'\n",
-    "window_type = 'even'\n",
-    "kaufmann_design = None\n",
-    "extra_bins = 0\n",
-    "num_windows = 1"
+    "mass_spec = IndependentMassSpectrometer(ionisation_mode, dataset, ps, scan_duration_dict=scan_time_dict)\n",
+    "controller = AIF(min_mz, max_mz)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "(400.080s) ms_level=1: 100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▉| 399.9600000000121/400 [00:56<00:00,  7.09it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# create an environment to run both the mass spec and controller\n",
+    "env = Environment(mass_spec, controller, min_rt, max_rt, progress_bar=True)\n",
+    "\n",
+    "# set the log level to WARNING so we don't see too many messages when environment is running\n",
+    "set_log_level_warning()\n",
+    "\n",
+    "# run the simulation\n",
+    "env.run()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "TODO: Need to update the DIA controllers to work with updated base controller"
+    "Simulated results are saved to the following .mzML file and can be viewed in tools like ToppView or using other mzML file viewers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2020-09-03 11:05:40.799 | DEBUG    | vimms.Environment:write_mzML:161 - Writing mzML file to C:\\Users\\Vinny\\work\\vimms\\demo\\02. Methods\\results\\aif_controller.mzML\n",
+      "2020-09-03 11:08:35.693 | DEBUG    | vimms.Environment:write_mzML:164 - mzML file successfully written!\n"
+     ]
+    }
+   ],
+   "source": [
+    "set_log_level_debug()\n",
+    "mzml_filename = 'aif_controller.mzML'\n",
+    "out_dir = os.path.join(os.getcwd(), 'results')\n",
+    "env.write_mzML(out_dir, mzml_filename)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### SWATH"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This example shows how to run the SWATH-style method on ViMMS. The controller send an MS1 scan followed by a series of fragmentation scans which cover the full m/z range."
    ]
   },
   {
@@ -126,20 +201,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mass_spec = IndependentMassSpectrometer(POSITIVE, dataset, ps)\n",
-    "controller = TreeController(dia_design, window_type, kaufmann_design, extra_bins, num_windows)"
+    "min_mz = 100\n",
+    "max_mz = 1000\n",
+    "width = 100\n",
+    "scan_overlap = 10\n",
+    "\n",
+    "ionisation_mode = POSITIVE\n",
+    "\n",
+    "scan_time_dict = {1: 0.124, 2: 0.124}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "mass_spec = IndependentMassSpectrometer(ionisation_mode, dataset, ps, scan_duration_dict=scan_time_dict)\n",
+    "controller = SWATH(min_mz, max_mz, width, scan_overlap=scan_overlap)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "(1440.180s) ms_level=1: 100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▉| 1439.9120499999863/1440 [01:53<00:00, 12.72it/s]\n"
+      "(400.024s) ms_level=2: 100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▉| 399.90000000002055/400 [00:19<00:00, 20.96it/s]\n"
      ]
     }
    ],
@@ -158,79 +251,46 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Run Fixed Window DIA"
+    "Simulated results are saved to the following .mzML file and can be viewed in tools like ToppView or using other mzML file viewers."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rt_range = [(0, 1440)]\n",
-    "min_rt = rt_range[0][0]\n",
-    "max_rt = rt_range[0][1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dia_design = 'basic'\n",
-    "window_type = 'even'\n",
-    "kaufmann_design = None\n",
-    "extra_bins = 0\n",
-    "num_windows = 10"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mass_spec = IndependentMassSpectrometer(POSITIVE, dataset, ps)\n",
-    "controller = TreeController(dia_design, window_type, kaufmann_design, extra_bins, num_windows)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "(1440.220s) ms_level=1: 100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▉| 1439.9528699999946/1440 [01:41<00:00, 14.12it/s]\n"
+      "2020-09-03 11:08:55.129 | DEBUG    | vimms.Environment:write_mzML:161 - Writing mzML file to C:\\Users\\Vinny\\work\\vimms\\demo\\02. Methods\\results\\swath_controller.mzML\n",
+      "c:\\users\\vinny\\.virtualenvs\\vimms-rr-f0yt0\\lib\\site-packages\\psims\\document.py:393: ReferentialIntegrityWarning: No reference was found for 100000 in Spectrum\n",
+      "  result = super(CallbackBindingPartial, self).__call__(*args, **kwargs)\n",
+      "2020-09-03 11:08:59.675 | DEBUG    | vimms.Environment:write_mzML:164 - mzML file successfully written!\n"
      ]
     }
    ],
    "source": [
-    "# create an environment to run both the mass spec and controller\n",
-    "env = Environment(mass_spec, controller, min_rt, max_rt, progress_bar=True)\n",
-    "\n",
-    "# set the log level to WARNING so we don't see too many messages when environment is running\n",
-    "set_log_level_warning()\n",
-    "\n",
-    "# run the simulation\n",
-    "env.run()"
+    "set_log_level_debug()\n",
+    "mzml_filename = 'swath_controller.mzML'\n",
+    "out_dir = os.path.join(os.getcwd(), 'results')\n",
+    "env.write_mzML(out_dir, mzml_filename)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Run Tree DIA method of Kauffman and Walker (2016)"
+    "### Nested DIA"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This method is based on the following paper: Kaufmann, A.; Walker, S. Nested data independent MS/MS acquisition. Anal. Bioanal. Chem. 2016, 408, 5031–5040."
+    "This example shows how to run a nested DIA method on ViMMS. This method comes from the following paper: Kaufmann A, Walker S. Nested data independent MS/MS acquisition. *Anal Bioanal Chem*. 2016;408(18):5031-5040. doi:10.1007/s00216-016-9607-8"
    ]
   },
   {
@@ -239,9 +299,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rt_range = [(0, 1440)]\n",
-    "min_rt = rt_range[0][0]\n",
-    "max_rt = rt_range[0][1]"
+    "window_type = 'even' # 'percentile'\n",
+    "kaufmann_design = 'nested'\n",
+    "num_windows=64 # this gets defaulted to this value regardless for this method\n",
+    "scan_overlap=0 # currently fixed at 0 regarless of this setting\n",
+    "\n",
+    "ionisation_mode = POSITIVE\n",
+    "scan_time_dict = {1: 0.12, 2: 0.06}\n",
+    "\n",
+    "min_rt = 0\n",
+    "max_rt = 400\n",
+    "\n",
+    "min_mz = 100\n",
+    "max_mz = 1000"
    ]
   },
   {
@@ -250,21 +320,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dia_design = 'kaufmann'\n",
-    "window_type = 'even'\n",
-    "kaufmann_design = 'tree'\n",
-    "extra_bins = 0\n",
-    "num_windows=10"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mass_spec = IndependentMassSpectrometer(POSITIVE, dataset, ps)\n",
-    "controller = TreeController(dia_design, window_type, kaufmann_design, extra_bins, num_windows)"
+    "mass_spec = IndependentMassSpectrometer(ionisation_mode, dataset, ps, scan_duration_dict=scan_time_dict)\n",
+    "controller = DiaController(min_mz, max_mz, window_type, kaufmann_design, num_windows, scan_overlap=scan_overlap)"
    ]
   },
   {
@@ -276,7 +333,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "(1440.014s) ms_level=1: 100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▉| 1439.6553499999836/1440 [01:47<00:00, 13.37it/s]\n"
+      "(400.020s) ms_level=2: 100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▉| 399.9600000000134/400 [01:06<00:00,  6.01it/s]\n"
      ]
     }
    ],
@@ -295,25 +352,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Run Nested DIA method of Kauffman and Walker (2016)"
+    "Simulated results are saved to the following .mzML file and can be viewed in tools like ToppView or using other mzML file viewers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2020-09-03 11:47:11.427 | DEBUG    | vimms.Environment:write_mzML:161 - Writing mzML file to C:\\Users\\Vinny\\work\\vimms\\demo\\02. Methods\\results\\nest_dia_controller.mzML\n",
+      "2020-09-03 11:47:28.137 | DEBUG    | vimms.Environment:write_mzML:164 - mzML file successfully written!\n"
+     ]
+    }
+   ],
+   "source": [
+    "set_log_level_debug()\n",
+    "mzml_filename = 'nest_dia_controller.mzML'\n",
+    "out_dir = os.path.join(os.getcwd(), 'results')\n",
+    "env.write_mzML(out_dir, mzml_filename)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This method is based on the following paper: Kaufmann, A.; Walker, S. Nested data independent MS/MS acquisition. Anal. Bioanal. Chem. 2016, 408, 5031–5040."
+    "### Tree DIA"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 26,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "rt_range = [(0, 1440)]\n",
-    "min_rt = rt_range[0][0]\n",
-    "max_rt = rt_range[0][1]"
+    "This example shows how to run a tree DIA method on ViMMS. This method comes from the following paper: Kaufmann A, Walker S. Nested data independent MS/MS acquisition. *Anal Bioanal Chem*. 2016;408(18):5031-5040. doi:10.1007/s00216-016-9607-8"
    ]
   },
   {
@@ -322,11 +398,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dia_design = 'kaufmann'\n",
-    "window_type = 'even'\n",
-    "kaufmann_design = 'nested'\n",
-    "extra_bins = 0\n",
-    "num_windows=10"
+    "window_type = 'even' # 'percentile'\n",
+    "kaufmann_design = 'tree'\n",
+    "num_windows=64 # this gets defaulted to this value regardless for this method\n",
+    "scan_overlap=0 # currently fixed at 0 regarless of this setting\n",
+    "\n",
+    "ionisation_mode = POSITIVE\n",
+    "scan_time_dict = {1: 0.12, 2: 0.06}\n",
+    "\n",
+    "min_rt = 0\n",
+    "max_rt = 400\n",
+    "\n",
+    "min_mz = 100\n",
+    "max_mz = 1000"
    ]
   },
   {
@@ -335,8 +419,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mass_spec = IndependentMassSpectrometer(POSITIVE, dataset, ps)\n",
-    "controller = TreeController(dia_design, window_type, kaufmann_design, extra_bins, num_windows)"
+    "mass_spec = IndependentMassSpectrometer(ionisation_mode, dataset, ps, scan_duration_dict=scan_time_dict)\n",
+    "controller = DiaController(min_mz, max_mz, window_type, kaufmann_design, num_windows, scan_overlap=scan_overlap)"
    ]
   },
   {
@@ -348,7 +432,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "(1440.139s) ms_level=1: 100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▉| 1439.8190899999854/1440 [01:39<00:00, 14.46it/s]\n"
+      "(400.020s) ms_level=2: 100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▉| 399.9600000000133/400 [01:33<00:00,  4.26it/s]\n"
      ]
     }
    ],
@@ -361,6 +445,36 @@
     "\n",
     "# run the simulation\n",
     "env.run()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Simulated results are saved to the following .mzML file and can be viewed in tools like ToppView or using other mzML file viewers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2020-09-03 11:49:39.475 | DEBUG    | vimms.Environment:write_mzML:161 - Writing mzML file to C:\\Users\\Vinny\\work\\vimms\\demo\\02. Methods\\results\\tree_dia_controller.mzML\n",
+      "2020-09-03 11:50:04.855 | DEBUG    | vimms.Environment:write_mzML:164 - mzML file successfully written!\n"
+     ]
+    }
+   ],
+   "source": [
+    "set_log_level_debug()\n",
+    "mzml_filename = 'tree_dia_controller.mzML'\n",
+    "out_dir = os.path.join(os.getcwd(), 'results')\n",
+    "env.write_mzML(out_dir, mzml_filename)"
    ]
   }
  ],
